full-example/aws/db_instance.tf
resource "aws_db_instance" "production" {
  allocated_storage                     = "50"
  auto_minor_version_upgrade            = "true"
  availability_zone                     = var.availability_zone_1
  backup_retention_period               = "7"
  backup_target                         = "region"
  backup_window                         = "10:01-10:31"
  copy_tags_to_snapshot                 = "false"
  customer_owned_ip_enabled             = "false"
  db_name                               = "application"
  db_subnet_group_name                  = "${aws_db_subnet_group.application.name}"
  dedicated_log_volume                  = "false"
  deletion_protection                   = "true"
  engine                                = "postgres"
  engine_lifecycle_support              = "open-source-rds-extended-support"
  engine_version                        = "17.5"
  iam_database_authentication_enabled   = "false"
  identifier                            = "syd-production-hedb"
  instance_class                        = "db.t3.small"
  iops                                  = "3000"
  license_model                         = "postgresql-license"
  maintenance_window                    = "fri:07:17-fri:07:47"
  max_allocated_storage                 = "0"
  monitoring_interval                   = "0"
  multi_az                              = "false"
  network_type                          = "IPV4"
  option_group_name                     = "default:postgres-17"
  parameter_group_name                  = "nc-pgsql-17-no-ssl"
  performance_insights_enabled          = "true"
  performance_insights_retention_period = "7"
  port                                  = "5432"
  publicly_accessible                   = "false"
  storage_encrypted                     = "true"
  storage_throughput                    = "125"
  storage_type                          = "gp3"
  manage_master_user_password           = true
  username                              = "application"
  skip_final_snapshot                   = true
  vpc_security_group_ids                = ["${aws_security_group.application-db-1.id}"]
}

resource "aws_db_instance" "production-gpdb" {
  allocated_storage                     = "50"
  auto_minor_version_upgrade            = "true"
  availability_zone                     = var.availability_zone_2
  backup_retention_period               = "7"
  backup_target                         = "region"
  backup_window                         = "10:01-10:31"
  copy_tags_to_snapshot                 = "false"
  customer_owned_ip_enabled             = "false"
  db_name                               = "application"
  db_subnet_group_name                  = "${aws_db_subnet_group.application.name}"
  dedicated_log_volume                  = "false"
  deletion_protection                   = "true"
  engine                                = "postgres"
  engine_lifecycle_support              = "open-source-rds-extended-support"
  engine_version                        = "17.5"
  iam_database_authentication_enabled   = "false"
  identifier                            = "syd-production-gpdb"
  instance_class                        = "db.t3.small"
  iops                                  = "3000"
  license_model                         = "postgresql-license"
  maintenance_window                    = "fri:07:17-fri:07:47"
  max_allocated_storage                 = "0"
  monitoring_interval                   = "0"
  multi_az                              = "false"
  network_type                          = "IPV4"
  option_group_name                     = "default:postgres-17"
  parameter_group_name                  = "nc-pgsql-17-no-ssl"
  performance_insights_enabled          = "true"
  performance_insights_retention_period = "7"
  port                                  = "5432"
  publicly_accessible                   = "false"
  storage_encrypted                     = "true"
  storage_throughput                    = "125"
  storage_type                          = "gp3"
  manage_master_user_password           = true
  username                              = "application"
  skip_final_snapshot                   = true
  vpc_security_group_ids                = ["${aws_security_group.application-db-1.id}"]
}
